feat: share batches with everyone on the server
